--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
         "core-js": "^2.6.5",
         "gatsby": "^2.1.9",
         "gatsby-image": "^2.0.29",
+        "gatsby-plugin-catch-links": "^2.0.11",
         "gatsby-plugin-manifest": "^2.0.18",
         "gatsby-plugin-offline": "^2.0.24",
         "gatsby-plugin-react-helmet": "^3.0.6",
         "gatsby-plugin-sharp": "^2.0.21",
         "gatsby-source-filesystem": "^2.0.20",
+        "gatsby-transformer-remark": "^2.3.0",
         "gatsby-transformer-sharp": "^2.1.14",
+        "lodash": "^4.17.11",
         "prop-types": "^15.7.2",
         "react": "^16.8.2",
         "react-dom": "^16.8.2",
