--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "license": "MIT",
     "scripts": {
         "build": "gatsby build",
+        "heroku-postbuild": "gatsby build",
         "develop": "gatsby develop",
         "start": "npm run develop",
         "serve": "gatsby serve",
