--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
     "dependencies": {
         "@material-ui/core": "^3.9.3",
         "braces": "^2.3.2",
-        "core-js": "^2.6.9",
-        "gatsby": "^2.15.11",
-        "gatsby-image": "^2.2.17",
-        "gatsby-plugin-catch-links": "^2.1.8",
-        "gatsby-plugin-manifest": "^2.2.15",
+        "core-js": "^2.6.10",
+        "gatsby": "^2.17.10",
+        "gatsby-image": "^2.2.30",
+        "gatsby-plugin-catch-links": "^2.1.15",
+        "gatsby-plugin-manifest": "^2.2.26",
         "gatsby-plugin-offline": "^2.2.10",
-        "gatsby-plugin-react-helmet": "^3.1.6",
-        "gatsby-plugin-sharp": "^2.2.20",
-        "gatsby-source-filesystem": "^2.1.21",
-        "gatsby-transformer-remark": "^2.6.21",
-        "gatsby-transformer-sharp": "^2.2.13",
+        "gatsby-plugin-react-helmet": "^3.1.13",
+        "gatsby-plugin-sharp": "^2.2.36",
+        "gatsby-source-filesystem": "^2.1.35",
+        "gatsby-transformer-remark": "^2.6.32",
+        "gatsby-transformer-sharp": "^2.3.2",
         "lodash": "^4.17.15",
         "prop-types": "^15.7.2",
-        "react": "^16.9.0",
-        "react-dom": "^16.9.0",
+        "react": "^16.11.0",
+        "react-dom": "^16.11.0",
         "react-helmet": "^5.2.1"
     },
     "keywords": [
@@ -42,5 +42,9 @@
     },
     "bugs": {
         "url": "https://github.com/gatsbyjs/gatsby/issues"
+    },
+    "devDependencies": {
+        "eslint": "^6.6.0",
+        "eslint-plugin-react": "^7.16.0"
     }
 }
